fix jumping button on focus in form

--- a/source/sass/blocks/custom-input.scss
+++ b/source/sass/blocks/custom-input.scss
@@ -60,6 +60,7 @@
 
     &:focus {
       border: 1px solid $color-white;
+      padding: 7px 0 5px 15px;
     }
 
     &:focus::placeholder {
